--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -6,7 +6,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/cv"
+        android:id="@+id/cv_cart"
         >
 
         <RelativeLayout
@@ -17,9 +17,9 @@
 
             <ImageView
                 android:src="@drawable/basic_v_profile_139"
-                android:layout_width="match_parent"
-                android:layout_height="220dp"
-                android:id="@+id/image"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:id="@+id/image_cart"
                 android:scaleType="fitXY"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
@@ -30,16 +30,20 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="alla"
-                android:id="@+id/name"
-                android:layout_below="@+id/image"
-                android:layout_marginTop="15dp"
+                android:id="@+id/name_cart"
+                android:gravity="center"
+                android:layout_toRightOf="@+id/image_cart"
+                android:layout_alignParentRight="true"
                 android:textSize="30sp"
                 />
             <TextView
-                android:id="@+id/price"
+                android:id="@+id/price_cart"
                 android:padding="2dp"
-                android:layout_below="@+id/name"
+                android:gravity="center"
+                android:layout_toRightOf="@+id/image_cart"
+                android:layout_below="@+id/name_cart"
                 android:text="199RM"
+                android:layout_alignParentRight="true"
                 android:textSize="16dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
